[bdist_wheel]
universal = 1

[flake8]
exclude = docs
max_line_length=100
ignore =
  # W503 line break before binary operator
  W503,
  # W504 line break after binary operator
  W504,
  # This is because flake8 doesn't do well with typehint style
  # E252 missing whitespace around parameter equals
  E252,

[metadata]
license_files = LICENSE
